--- a/help/package.json
+++ b/help/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "e-commerce",
+  "name": "help",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "express-ejs-layouts": "^2.5.1",
     "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
     "morgan": "~1.9.1"
   }
 }
